New testing app

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,11 +46,12 @@ jobs:
       - name: Add known host
         run: ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
 
-      - name: Deploy to server
+      - name: Deploy to server and show logs
         run: |
           ssh root@${{ secrets.SERVER_IP }} << 'EOF'
             docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/simple-frontend:latest
             docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/simple-backend:latest
+
             docker stop frontend || true && docker rm frontend || true
             docker stop backend || true && docker rm backend || true
             docker stop db || true && docker rm db || true
@@ -73,4 +74,13 @@ jobs:
               --network app-net \
               -p 9000:3000 \
               ${{ secrets.DOCKER_HUB_USERNAME }}/simple-frontend:latest
+
+            echo "Checking container status"
+            docker ps -a
+
+            echo "Backend logs:"
+            docker logs backend || true
+
+            echo "rontend logs:"
+            docker logs frontend || true
           EOF
