--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,19 +49,19 @@ jobs:
       - name: Deploy to server and show logs
         run: |
           ssh root@${{ secrets.SERVER_IP }} << 'EOF'
-            echo "🔄 Pulling latest Docker images..."
+            echo "Pulling latest Docker images..."
             docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/simple-frontend:latest
             docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/simple-backend:latest
 
-            echo "🧹 Stopping and removing old containers..."
+            echo "Stopping and removing old containers..."
             docker stop frontend || true && docker rm frontend || true
             docker stop backend || true && docker rm backend || true
             docker stop db || true && docker rm db || true
 
-            echo "🌐 Creating Docker network if not exists..."
+            echo "Creating Docker network if not exists..."
             docker network inspect app-net >/dev/null 2>&1 || docker network create app-net
 
-            echo "🐘 Starting PostgreSQL container..."
+            echo "Starting PostgreSQL container..."
             docker run -d --name db \
               --network app-net \
               -e POSTGRES_USER=testuser \
@@ -81,7 +81,7 @@ jobs:
               -e DB_PORT=5432 \
               ${{ secrets.DOCKER_HUB_USERNAME }}/simple-backend:latest
 
-            echo "🎨 Starting frontend container..."
+            echo "Starting frontend container..."
             docker run -d --name frontend \
               --network app-net \
               -p 9000:3000 \
