--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -106,7 +106,7 @@ jobs:
             echo "Frontend logs:"
             docker logs frontend || true
             
-            echo "Removing specific images: frontend and backend"
+            echo "Cleaning up docker images"
             docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/simple-frontend:latest || true
             docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/simple-backend:latest || true
           EOF
