--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -106,7 +106,7 @@ jobs:
             echo "Frontend logs:"
             docker logs frontend || true
             
-            echo "Cleaning up docker images"
-            docker rmi -f ${{ secrets.DOCKER_HUB_USERNAME }}/simple-frontend:latest || true
-            docker rmi -f ${{ secrets.DOCKER_HUB_USERNAME }}/simple-backend:latest || true
+            echo "Cleaning up Docker images"
+            docker image prune -f
+            docker image prune -a -f
           EOF
